Use jul instead of slf4j